--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Menbere:wght@100..700&display=swap');
 
 *{
   padding: 0;
@@ -30,4 +30,7 @@ a{
   100%{
     opacity: 1;
   }
+}
+:root {
+  font-family: 'Menbere', system-ui, sans-serif;
 }
