--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Menbere:wght@100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Outfit;
   scroll-behavior: smooth;
 }
 
@@ -32,5 +31,5 @@ a{
   }
 }
 :root {
-  font-family: 'Menbere', system-ui, sans-serif;
+  font-family: 'Varela Round', system-ui, sans-serif;
 }
