--- a/src/components/GoToTop/GoToTop.css
+++ b/src/components/GoToTop/GoToTop.css
@@ -13,6 +13,7 @@
     width: 50px;
     height: 50px;
     cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     
     /* Centering the icon */
     display: flex;
@@ -20,8 +21,13 @@
     align-items: center;
 
     /* Smooth transition for appearing/disappearing */
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out, transform 0.3s ease-in-out;
+    transform: translateY(20px);
+}
+
+.top-btn.visible {
     opacity: 1;
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
     transform: translateY(0);
 }
 
