--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,10 +8,20 @@
     z-index: 1000;
     background-color: white; 
     width: 100%;
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbar.hidden {
+    transform: translateY(-100%);
+}
+
+.navbar.visible {
+    transform: translateY(0);
 }
 
 .navbar .logo{
-    width: 150px;
+    width: 130px;
+    padding-left: 20px;
 }
 
 .navbar-menu{
